brought code over from sandbox

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -8,27 +8,30 @@
   </head>
   <body>
     <h1>Style Guide for Pocket Gallery</h1>
-
-    <h3>Tone</h3>
-    <div id="tone">
-      <p></p>
-    </div>
-    <h3>Colors</h3>
-    <div id="colors"></div>
-    <div id="colors"></div>
-    <div id="colors"></div>
-    <div id="colors"></div>
-    <div id="colors"></div>
-    <h3>Typography</h3>
-    <div id="fonts">
-      <p></p>
-      <p></p>
-    </div>
-    <h3>Icons</h3>
-    <div id="icons"></div>
-    <h3>Key Words</h3>
-    <div id="keywords">
-      <p></p>
+    <div class="wrapper">
+      <h3>Tone</h3>
+      <div id="tone">
+        <p></p>
+      </div>
+      <h3>Colors</h3>
+      <div class="colors">
+        <div id="color-1"></div>
+        <div id="color-2"></div>
+        <div id="color-3"></div>
+        <div id="color-4"></div>
+        <div id="color-5"></div>
+      </div>
+      <h3>Typography</h3>
+      <div id="fonts">
+        <p>Pocket Gallery</p>
+        <p>Pocket Gallery</p>
+      </div>
+      <h3>Icons</h3>
+      <div id="icons"></div>
+      <h3>Key Words</h3>
+      <div id="keywords">
+        <p></p>
+      </div>
     </div>
   </body>
 </html>
